Feat: 각 상품별 주문 기능 구현
Delivery엔티티를 Pickup 엔티티로 변경
InitDb를 통한 애플리케이션 구동시 초기 설정 추가

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+	// thymeleaf sec:authorize 사용하기 위해 필요 : 타임리프에서 스프링 시큐티의 문법이나 형식을 지원하는 확장팩 라이브러리
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 	testImplementation 'org.springframework.security:spring-security-test'
 	compileOnly 'org.projectlombok:lombok'
 	compileOnly 'org.springframework.boot:spring-boot-devtools'
